fix for dark mode

--- a/website/themes/moderncpp/source/modern-cpp/css/_common.styl
+++ b/website/themes/moderncpp/source/modern-cpp/css/_common.styl
@@ -7,7 +7,7 @@ body
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   color: $medium
-  background-color: white
+  background-color: rgb(24, 26, 27)
   margin: 0
   &.docs
     padding-top: $header-height
@@ -18,19 +18,19 @@ body
 
 a
   text-decoration: none
-  color: $medium
+  color: rgb(166, 188, 206);
 
 img
   border: none
 
 h1, h2, h3, h4, strong
   font-weight: 600
-  color: $dark
+  color: rgb(174, 194, 211)
 
 code, pre
   font-family: $code-font
-  font-size: $code-font-size
-  background-color: $codebg
+  font-size: 1.0em
+  background-color: rgb(28, 30, 31)
   -webkit-font-smoothing: initial
   -moz-osx-font-smoothing: initial
 
@@ -69,7 +69,7 @@ a.button:hover
 
 .highlight
   overflow-x: auto
-  background-color: $codebg
+  background-color: rgb(28, 30, 31)
   padding: .4em 0 0
   line-height: 1.1em
   border-radius: $radius
