--- a/website/themes/moderncpp/source/modern-cpp/css/_header.styl
+++ b/website/themes/moderncpp/source/modern-cpp/css/_header.styl
@@ -1,7 +1,7 @@
 $header-height = 40px
 
 #header
-  background-color: $theme
+  background-color: rgb(101, 36, 43)
   height: $header-height
   padding: $heading-padding-vertical 60px
   position: relative
