--- a/website/themes/moderncpp/source/modern-cpp/css/_sidebar.styl
+++ b/website/themes/moderncpp/source/modern-cpp/css/_sidebar.styl
@@ -30,10 +30,10 @@
   .menu-sub
     font-size: .85em
   .sidebar-link
-    color: $light
+    color: rgb(156, 147, 134)
     &.current
       font-weight: 600
-      color: $theme
+      color: rgb(210, 129, 138)
     &.new
       &:after
         content: "NEW"
@@ -54,7 +54,7 @@
   .section-link
     &.active
       font-weight: bold
-      color: $theme
+      color: #d2818a
   .main-menu
     margin-bottom: 20px
     display: none
