--- a/website/themes/moderncpp/source/modern-cpp/css/_syntax.styl
+++ b/website/themes/moderncpp/source/modern-cpp/css/_syntax.styl
@@ -2,7 +2,7 @@
   color: #999
 
 pre
-  color: #525252
+  color: rgb(180, 174, 164)
   .function .keyword,
   .constant
     color: #0092db
@@ -30,7 +30,7 @@ pre
   .regexp
     color: $theme
   .title
-    color: #7e2d36
+    color: rgb(210, 129, 138)
   .tag .value,
   .string,
   .subst,
@@ -55,7 +55,7 @@ pre
   .apache .cbracket,
   .tex .command,
   .prompt
-    color: $theme
+    color: rgb(210, 129, 138)
   .comment,
   .java .annotation,
   .python .decorator,
