--- a/website/themes/moderncpp/source/modern-cpp/css/index.styl
+++ b/website/themes/moderncpp/source/modern-cpp/css/index.styl
@@ -1,3 +1,4 @@
+/* Generated from src/styles/index.styl */
 @import "_common"
 @import "_header"
 @import "_sidebar"
@@ -5,7 +6,7 @@
 $width = 900px
 
 body
-  background-color: #fff
+  background-color: #242627
   margin-bottom: 200px
 #logo
   span
@@ -25,7 +26,7 @@ body
 
 #hero
   padding: 100px 40px 40px 200px
-  background-color: #fff
+  background-color: #242628
   .inner
     max-width: $width
     margin: 0 auto
